Changed Proto,Added User Credentials,New Implementations