@@ -1,10 +1,9 @@
 package com.health.doctor.adapters.input.grpc;
 
-import com.health.doctor.application.service.LocationService;
-import com.health.doctor.application.usecase.implementtion.*;
 import com.health.doctor.application.usecase.interfaces.*;
 import com.health.doctor.domain.exception.DomainException;
 import com.health.doctor.domain.model.*;
+import com.health.doctor.domain.model.DoctorType;
 import com.health.doctor.domain.ports.AppointmentRepositoryPort;
 import com.health.doctor.domain.ports.DoctorRepositoryPort;
 import com.health.grpc.auth.ValidateTokenRequest;
@@ -12,136 +11,127 @@ import com.health.grpc.auth.ValidateTokenResponse;
 import com.health.grpc.doctor.*;
 import io.grpc.Status;
 import io.grpc.stub.StreamObserver;
+import io.micronaut.grpc.annotation.GrpcService;
 import jakarta.inject.Singleton;
 import lombok.extern.slf4j.Slf4j;
 
-import java.time.Instant;
 import java.time.LocalDate;
 import java.time.LocalTime;
-import java.util.HashSet;
-import java.util.List;
-import java.util.Optional;
-import java.util.UUID;
+import java.util.*;
 import java.util.stream.Collectors;
 
 @Slf4j
+@GrpcService
 @Singleton
 public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBase {
 
-
     private final AppointmentInterface appointmentsUseCase;
-    private final ClinicInterface clinicUseCase;
-    private final DoctorInterface doctorUseCase;
-    private final ScheduleInterface scheduleUseCase;
+    private final ClinicInterface      clinicUseCase;
+    private final DoctorInterface      doctorUseCase;
+    private final ScheduleInterface    scheduleUseCase;
     private final DoctorRepositoryPort doctorRepo;
     private final AppointmentRepositoryPort appointmentRepo;
 
-    public DoctorGrpcApi(AppointmentInterface appointmentsUseCase, ClinicInterface clinicUseCase, DoctorInterface doctorUseCase, ScheduleInterface scheduleUseCase, DoctorRepositoryPort doctorRepo, AppointmentRepositoryPort appointmentRepo) {
+    public DoctorGrpcApi(AppointmentInterface appointmentsUseCase,
+                         ClinicInterface clinicUseCase,
+                         DoctorInterface doctorUseCase,
+                         ScheduleInterface scheduleUseCase,
+                         DoctorRepositoryPort doctorRepo,
+                         AppointmentRepositoryPort appointmentRepo) {
         this.appointmentsUseCase = appointmentsUseCase;
-        this.clinicUseCase = clinicUseCase;
-        this.doctorUseCase = doctorUseCase;
-        this.scheduleUseCase = scheduleUseCase;
-        this.doctorRepo = doctorRepo;
-        this.appointmentRepo = appointmentRepo;
+        this.clinicUseCase       = clinicUseCase;
+        this.doctorUseCase       = doctorUseCase;
+        this.scheduleUseCase     = scheduleUseCase;
+        this.doctorRepo          = doctorRepo;
+        this.appointmentRepo     = appointmentRepo;
     }
 
+    // ── Doctor ────────────────────────────────────────────────────────────────
 
     @Override
     public void createDoctor(CreateDoctorRequest request,
-                             StreamObserver<CreateDoctorResponse> observer){
-
-        handle(observer, ()-> {
-
-
+                             StreamObserver<CreateDoctorResponse> observer) {
+        handle(observer, () -> {
             UUID clinicId = null;
-            String clinicIdString = request.getClinicId();
-            if (clinicIdString != null && !clinicIdString.trim().isEmpty()) {
-                try {
-                    clinicId = UUID.fromString(clinicIdString.trim());
-                } catch (IllegalArgumentException e) {
-                    // Handle invalid UUID format
-                    clinicId = null; // or log an error
-                }
+            String raw = request.getClinicId();
+            if (raw != null && !raw.isBlank()) {
+                try { clinicId = UUID.fromString(raw.trim()); }
+                catch (IllegalArgumentException ignored) { }
             }
 
-            DoctorType type = DoctorType.valueOf(request.getType().name());
+            DoctorType type = DoctorType.valueOf(request.getType().toString());
             UUID id = doctorUseCase.createDoctor(
-                    request.getName(),
-                    clinicId,
-                    type,
+                    request.getName(), clinicId, type,
                     request.getSpecialization(),
-                    request.getEmail(),
-                    request.getPassword()
+                    request.getEmail(), request.getPassword()
             );
+
+            Doctor doctor = doctorRepo.findById(id)
+                    .orElseThrow(() -> new DomainException("Doctor creation failed", Status.INTERNAL));
+
             observer.onNext(CreateDoctorResponse.newBuilder()
-                    .setDoctorId(id.toString())
-                    .setMessage("Doctor Created Successfully")
-                    .build()
-            );
-            observer.onCompleted();
-        });
-    }
-
-    @Override
-    public void createClinic(CreateClinicRequest request,
-                             StreamObserver<CreateClinicResponse> observer){
-        handle(observer, ()-> {
-            UUID id = clinicUseCase.createClinic(
-                    request.getName(), request.getLocationText()
-            );
-            observer.onNext(CreateClinicResponse.newBuilder()
-                    .setClinicId(id.toString())
-                    .setMessage("Clinic Created Successfully")
-                    .build()
-            );
-            observer.onCompleted();
-        });
-    }
-
-    @Override
-    public void createSchedule(CreateScheduleRequest request,
-                               StreamObserver<CreateScheduleResponse> observer){
-        handle(observer, () -> {
-            scheduleUseCase.createSchedule(
-                    UUID.fromString(request.getDoctorId()),
-                    new HashSet<>(request.getWorkingDaysList()),
-                    Instant.parse(request.getStartTime()),
-                    Instant.parse(request.getEndTime()),
-                    request.getSlotDurationMinutes(),
-                    request.getMaxAppointmentsDay()
-            );
-            observer.onNext(CreateScheduleResponse.newBuilder()
-                    .setMessage("Schedule Created Successfully")
+                    .setDoctor(toMsg(doctor))
+                    .setMessage("Doctor created successfully")
                     .build());
             observer.onCompleted();
         });
     }
 
-
-
     @Override
-    public void getNearbyDoctors(NearbyDoctorsRequest request,
-                                 StreamObserver<NearbyDoctorsResponse> responseObserver) {
-        handle(responseObserver, () -> {
-            List<Doctor> doctors = doctorUseCase.getDoctorsByLocationText(request.getLocationText());
-            responseObserver.onNext(NearbyDoctorsResponse.newBuilder()
-                    .addAllDoctors(doctors.stream().map(this::toMsg).collect(Collectors.toList()))
-                    .build()
-            );
-            responseObserver.onCompleted();
+    public void getDoctor(GetDoctorRequest request,
+                          StreamObserver<GetDoctorResponse> observer) {
+        handle(observer, () -> {
+            Doctor doctor = doctorRepo.findById(UUID.fromString(request.getDoctorId()))
+                    .orElseThrow(() -> new DomainException("Doctor not found", Status.NOT_FOUND));
+            observer.onNext(GetDoctorResponse.newBuilder().setDoctor(toMsg(doctor)).build());
+            observer.onCompleted();
         });
     }
 
     @Override
-    public void getDoctorsByLocation(ByLocationRequest request,
-                                     StreamObserver<ByLocationResponse> responseObserver) {
-        handle(responseObserver, () -> {
-            List<Doctor> doctors = doctorUseCase.getDoctorsByLocationGeohash(request.getGeohashPrefix());
-            responseObserver.onNext(ByLocationResponse.newBuilder()
-                    .addAllDoctors(doctors.stream().map(this::toMsg).collect(Collectors.toList()))
-                    .build()
+    public void doctorExists(DoctorExistsRequest request,
+                             StreamObserver<DoctorExistsResponse> observer) {
+        handle(observer, () -> {
+            boolean exists = doctorRepo.findById(UUID.fromString(request.getDoctorId())).isPresent();
+            observer.onNext(DoctorExistsResponse.newBuilder().setExists(exists).build());
+            observer.onCompleted();
+        });
+    }
+
+    @Override
+    public void updateLocation(UpdateLocationRequest request,
+                               StreamObserver<UpdateLocationResponse> observer) {
+        handle(observer, () -> {
+            // Method renamed to updateDoctorLocation in DoctorInterface
+            doctorUseCase.updateDoctorLocation(
+                    UUID.fromString(request.getDoctorId()),
+                    request.getLocationText()
             );
-            responseObserver.onCompleted();
+            observer.onNext(UpdateLocationResponse.newBuilder()
+                    .setSuccess(true)
+                    .setMessage("Location updated successfully")
+                    .build());
+            observer.onCompleted();
+        });
+    }
+
+    // ── Clinic ────────────────────────────────────────────────────────────────
+
+    @Override
+    public void createClinic(CreateClinicRequest request,
+                             StreamObserver<CreateClinicResponse> observer) {
+        handle(observer, () -> {
+            UUID id = clinicUseCase.createClinic(request.getName(), request.getLocationText());
+            Clinic clinic = clinicUseCase.getClinicById(id);
+            observer.onNext(CreateClinicResponse.newBuilder()
+                    .setClinic(ClinicMessage.newBuilder()
+                            .setClinicId(clinic.getId().toString())
+                            .setName(clinic.getName())
+                            .setLocationText(clinic.getLocationText())
+                            .build())
+                    .setMessage("Clinic created successfully")
+                    .build());
+            observer.onCompleted();
         });
     }
 
@@ -158,16 +148,36 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
         });
     }
 
+    // ── Schedule ──────────────────────────────────────────────────────────────
+
+    @Override
+    public void createSchedule(CreateScheduleRequest request,
+                               StreamObserver<CreateScheduleResponse> observer) {
+        handle(observer, () -> {
+            scheduleUseCase.createSchedule(
+                    UUID.fromString(request.getDoctorId()),
+                    new HashSet<>(request.getWorkingDaysList()),
+                    LocalTime.parse(request.getStartTime()),
+                    LocalTime.parse(request.getEndTime()),
+                    request.getSlotDurationMinutes(),
+                    request.getMaxAppointmentsDay()
+            );
+            observer.onNext(CreateScheduleResponse.newBuilder()
+                    .setMessage("Schedule created successfully")
+                    .build());
+            observer.onCompleted();
+        });
+    }
 
     @Override
     public void getDoctorSchedule(GetScheduleRequest request,
                                   StreamObserver<GetScheduleResponse> observer) {
         handle(observer, () -> {
-            DoctorSchedule s = scheduleUseCase.getSchedule(
-                            UUID.fromString(request.getDoctorId()))
+            // scheduleUseCase.getSchedule returns Optional<Optional<DoctorSchedule>>
+            DoctorSchedule s = scheduleUseCase.getSchedule(UUID.fromString(request.getDoctorId()))
+                    .flatMap(opt -> opt)
                     .orElseThrow(() -> new com.health.doctor.domain.exception
-                            .NotFoundException("No schedule for doctor: "
-                            + request.getDoctorId()));
+                            .NotFoundException("No schedule for doctor: " + request.getDoctorId()));
             observer.onNext(GetScheduleResponse.newBuilder()
                     .setDoctorId(s.getDoctorId().toString())
                     .addAllWorkingDays(s.getWorkingDays().stream()
@@ -181,50 +191,33 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
         });
     }
 
-
+    // ── Location ──────────────────────────────────────────────────────────────
 
     @Override
-    public void getAppointments(GetAppointmentsRequest request,
-                                StreamObserver<GetAppointmentsResponse> observer) {
+    public void getNearbyDoctors(NearbyDoctorsRequest request,
+                                 StreamObserver<NearbyDoctorsResponse> observer) {
         handle(observer, () -> {
-            List<Appointment> list = appointmentsUseCase.getAppointment(
-                    UUID.fromString(request.getDoctorId()),
-                    LocalDate.parse(request.getDate())
-            );
-            observer.onNext(GetAppointmentsResponse.newBuilder()
-                    .addAllAppointments(list.stream()
-                            .map(this::toApptMsg).collect(Collectors.toList()))
+            List<Doctor> doctors = doctorUseCase.getDoctorsByLocationText(request.getLocationText());
+            observer.onNext(NearbyDoctorsResponse.newBuilder()
+                    .addAllDoctors(doctors.stream().map(this::toMsg).collect(Collectors.toList()))
                     .build());
             observer.onCompleted();
         });
     }
 
     @Override
-    public void updateLocation(UpdateLocationRequest request,
-                               StreamObserver<UpdateLocationResponse> responseObserver) {
-       handle(responseObserver, () -> {
-           doctorUseCase.UpdateDoctorLocation(
-                   UUID.fromString(request.getDoctorId()),
-                   request.getLocationText()
-           );
-           responseObserver.onNext(UpdateLocationResponse.newBuilder()
-                   .setSuccess(true)
-                   .setMessage("Location Updated SuccessFully")
-                   .build());
-           responseObserver.onCompleted();
-       });
-    }
-
-    @Override
-    public void doctorExists(DoctorExistsRequest request,
-                             StreamObserver<DoctorExistsResponse> observer) {
+    public void getDoctorsByLocation(ByLocationRequest request,
+                                     StreamObserver<ByLocationResponse> observer) {
         handle(observer, () -> {
-            Optional<Doctor> d = doctorRepo.findById(UUID.fromString(request.getDoctorId()));
-            observer.onNext(DoctorExistsResponse.newBuilder()
-                    .setExists(d.isPresent()).build());
+            List<Doctor> doctors = doctorUseCase.getDoctorsByLocationGeohash(request.getGeohashPrefix());
+            observer.onNext(ByLocationResponse.newBuilder()
+                    .addAllDoctors(doctors.stream().map(this::toMsg).collect(Collectors.toList()))
+                    .build());
             observer.onCompleted();
         });
     }
+
+    // ── Appointments ──────────────────────────────────────────────────────────
 
     @Override
     public void createAppointment(CreateAppointmentRequest request,
@@ -234,11 +227,14 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
                     UUID.fromString(request.getDoctorId()),
                     UUID.fromString(request.getPatientId()),
                     LocalDate.parse(request.getDate()),
-                    LocalTime.parse(request.getTime())
+                    LocalTime.parse(request.getTime()),
+                    request.getReasonForVisit()   // NEW: passed through
             );
+            Appointment appt = appointmentRepo.findById(id)
+                    .orElseThrow(() -> new DomainException("Appointment creation failed", Status.INTERNAL));
             observer.onNext(CreateAppointmentResponse.newBuilder()
                     .setSuccess(true)
-                    .setAppointmentId(id.toString())
+                    .setAppointment(toApptMsg(appt))
                     .setMessage("Appointment created successfully")
                     .build());
             observer.onCompleted();
@@ -249,13 +245,13 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
     public void cancelAppointment(CancelAppointmentRequest request,
                                   StreamObserver<CancelAppointmentResponse> observer) {
         handle(observer, () -> {
-
             appointmentsUseCase.cancelAppointment(
                     UUID.fromString(request.getAppointmentId()),
                     UUID.fromString(request.getPatientId()),
                     UUID.fromString(request.getDoctorId()),
                     LocalDate.parse(request.getDate()),
-                    Instant.parse(request.getTime())
+                    LocalTime.parse(request.getTime()),
+                    request.getCancellationReason()   // NEW: passed through
             );
             observer.onNext(CancelAppointmentResponse.newBuilder()
                     .setSuccess(true).setMessage("Cancelled").build());
@@ -263,6 +259,20 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
         });
     }
 
+    @Override
+    public void getAppointments(GetAppointmentsRequest request,
+                                StreamObserver<GetAppointmentsResponse> observer) {
+        handle(observer, () -> {
+            List<Appointment> list = appointmentsUseCase.getAppointment(
+                    UUID.fromString(request.getDoctorId()),
+                    LocalDate.parse(request.getDate())
+            );
+            observer.onNext(GetAppointmentsResponse.newBuilder()
+                    .addAllAppointments(list.stream().map(this::toApptMsg).collect(Collectors.toList()))
+                    .build());
+            observer.onCompleted();
+        });
+    }
 
     @Override
     public void getPendingAppointments(GetAppointmentsRequest request,
@@ -273,8 +283,22 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
                     LocalDate.parse(request.getDate())
             );
             observer.onNext(GetAppointmentsResponse.newBuilder()
-                    .addAllAppointments(list.stream()
-                            .map(this::toApptMsg).collect(Collectors.toList()))
+                    .addAllAppointments(list.stream().map(this::toApptMsg).collect(Collectors.toList()))
+                    .build());
+            observer.onCompleted();
+        });
+    }
+
+    @Override
+    public void getMyAppointments(GetMyAppointmentsRequest request,
+                                  StreamObserver<GetMyAppointmentsResponse> observer) {
+        handle(observer, () -> {
+            List<Appointment> list = appointmentRepo.findByPatientAndDate(
+                    UUID.fromString(request.getPatientId()),
+                    LocalDate.parse(request.getDate())
+            );
+            observer.onNext(GetMyAppointmentsResponse.newBuilder()
+                    .addAllAppointments(list.stream().map(this::toApptMsg).collect(Collectors.toList()))
                     .build());
             observer.onCompleted();
         });
@@ -302,29 +326,14 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
         });
     }
 
-
-    @Override
-    public void getMyAppointments(GetMyAppointmentsRequest request,
-                                  StreamObserver<GetMyAppointmentsResponse> observer) {
-        handle(observer, () -> {
-            List<Appointment> list = appointmentRepo.findByPatientAndDate(
-                    UUID.fromString(request.getPatientId()),
-                    LocalDate.parse(request.getDate())
-            );
-            observer.onNext(GetMyAppointmentsResponse.newBuilder()
-                    .addAllAppointments(list.stream()
-                            .map(this::toApptMsg).collect(Collectors.toList()))
-                    .build());
-            observer.onCompleted();
-        });
-    }
+    // ── Auth ──────────────────────────────────────────────────────────────────
 
     @Override
     public void doctorLogin(DoctorLoginRequest request,
                             StreamObserver<DoctorLoginResponse> observer) {
-        handle(observer ,() -> {
+        handle(observer, () -> {
             DoctorLoginResponse response = doctorUseCase.loginDoctor(
-                    request.getEmail(),request.getPassword());
+                    request.getEmail(), request.getPassword());
             observer.onNext(response);
             observer.onCompleted();
         });
@@ -334,32 +343,43 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
     public void validateDoctorToken(ValidateTokenRequest request,
                                     StreamObserver<ValidateTokenResponse> observer) {
         handle(observer, () -> {
-            ValidateTokenResponse response = doctorUseCase.validateDoctor(
-                    request.getToken());
+            ValidateTokenResponse response = doctorUseCase.validateDoctor(request.getToken());
             observer.onNext(response);
             observer.onCompleted();
         });
     }
 
+    // ── Mappers ───────────────────────────────────────────────────────────────
+
     private DoctorMessage toMsg(Doctor d) {
-        return DoctorMessage.newBuilder()
+        DoctorMessage.Builder b = DoctorMessage.newBuilder()
                 .setDoctorId(d.getId() != null ? d.getId().toString() : "")
                 .setName(d.getName() != null ? d.getName() : "")
-                .setType(DoctorMessage.Type.valueOf(d.getType().name()))
                 .setSpecialization(d.getSpecialization() != null ? d.getSpecialization() : "")
-                .setIsActive(d.isActive())
-                .build();
+                .setIsActive(d.isActive());
+        if (d.getType() != null)
+            b.setType(com.health.grpc.doctor.DoctorType.valueOf(d.getType().name()));
+        if (d.getClinicId() != null)
+            b.setClinicId(d.getClinicId().toString());
+        return b.build();
     }
 
+    /** Maps domain Appointment → enriched AppointmentMessage (includes denormalized fields). */
     private AppointmentMessage toApptMsg(Appointment a) {
-        return AppointmentMessage.newBuilder()
+        AppointmentMessage.Builder b = AppointmentMessage.newBuilder()
                 .setAppointmentId(a.getId().toString())
                 .setDoctorId(a.getDoctorId().toString())
                 .setPatientId(a.getPatientId().toString())
                 .setDate(a.getAppointmentDate().toString())
                 .setTime(a.getScheduleTime().toString())
-                .setStatus(AppointmentMessage.Status.valueOf(a.getStatus().name()))
-                .build();
+                .setStatus(com.health.grpc.doctor.AppointmentStatus.valueOf(a.getStatus().name()));
+        if (a.getPatientName()        != null) b.setPatientName(a.getPatientName());
+        if (a.getPatientPhone()       != null) b.setPatientPhone(a.getPatientPhone());
+        if (a.getDoctorName()         != null) b.setDoctorName(a.getDoctorName());
+        if (a.getClinicName()         != null) b.setClinicName(a.getClinicName());
+        if (a.getReasonForVisit()     != null) b.setReasonForVisit(a.getReasonForVisit());
+        if (a.getCancellationReason() != null) b.setCancellationReason(a.getCancellationReason());
+        return b.build();
     }
 
     private Appointment toAppointment(AppointmentActionRequest r) {
@@ -369,8 +389,9 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
                 UUID.fromString(r.getPatientId()),
                 LocalDate.parse(r.getDate()),
                 LocalTime.parse(r.getTime()),
-                AppointmentStatus.valueOf(r.getStatus().name()),
-                null, null
+                com.health.doctor.domain.model.AppointmentStatus.valueOf(r.getStatus().name()),
+                null, // createdAt
+                null  // updatedAt
         );
     }
 
@@ -384,7 +405,7 @@ public class DoctorGrpcApi extends DoctorGrpcServiceGrpc.DoctorGrpcServiceImplBa
         } catch (IllegalArgumentException e) {
             log.warn("Invalid argument: {}", e.getMessage());
             observer.onError(Status.INVALID_ARGUMENT
-                    .withDescription(e.getCause()+e.getMessage()).asRuntimeException());
+                    .withDescription(e.getMessage()).asRuntimeException());
         } catch (Exception e) {
             log.error("Unexpected gRPC error", e);
             observer.onError(Status.INTERNAL
